--- a/HerosOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HerosOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies and Setup\n",
+    "# Bring in Dependencies and Setup\n",
     "import pandas as pd\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -86,7 +88,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Getting the number of players variable and setting up a dataframe\n",
+    "count_players = purchase_data[\"SN\"].nunique()\n",
+    "pd.DataFrame({\"Total Players\":[count_players]})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,8 +164,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     179         $3.05                 780     $2,379.77"
+       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                  780     $2,379.77"
       ]
      },
      "execution_count": 3,
@@ -167,7 +173,18 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Define variables and calculations\n",
+    "unique_items = purchase_data[\"Item ID\"].nunique()\n",
+    "average_price = purchase_data[\"Price\"].mean()\n",
+    "number_of_purchases = purchase_data[\"Purchase ID\"].nunique()\n",
+    "total_rev = purchase_data[\"Price\"].sum()\n",
+    "# Create dataframe\n",
+    "pd.DataFrame({\"Number of Unique Items\":[unique_items],\n",
+    "              \"Average Price\":[\"$\"+str(round(average_price,2))],\n",
+    "              \"Number of Purchases\":[number_of_purchases],\n",
+    "              \"Total Revenue\":[\"$\"+'{0:,.2f}'.format(total_rev)]})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +270,17 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Define variables and calculations\n",
+    "purchase_data_no_duplicates = purchase_data.drop_duplicates([\"SN\"])\n",
+    "gender_totals=pd.DataFrame(purchase_data_no_duplicates[\"Gender\"].value_counts())\n",
+    "gender_percentages=round((gender_totals/count_players)*100,2).astype(str) + '%'    \n",
+    "# Combining series\n",
+    "summary_gender = pd.concat([gender_totals,gender_percentages],axis=1)\n",
+    "# Assigning column names\n",
+    "summary_gender.columns = [\"Total Count\",\"Percentage of Players\"]\n",
+    "summary_gender"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,11 +374,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
        "                      Total Purchase Value Avg Total Purchase per Person  \n",
        "Gender                                                                    \n",
@@ -365,7 +392,22 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Defining variables and calculations\n",
+    "purchase_count=purchase_data.groupby([\"Gender\"]).count()[\"Purchase ID\"]\n",
+    "avg_purchase_price=round(purchase_data.groupby([\"Gender\"]).mean()[\"Price\"],2)\n",
+    "total_purchase_value=round(purchase_data.groupby([\"Gender\"]).sum()[\"Price\"],2)\n",
+    "avg_total_purchase_per_person = round(total_purchase_value / purchase_data_no_duplicates.groupby([\"Gender\"]).count()[\"Purchase ID\"],2)\n",
+    "# Combining series together\n",
+    "summary_gender_purch_analysis = pd.concat([purchase_count,avg_purchase_price,total_purchase_value,avg_total_purchase_per_person],axis=1)\n",
+    "# Defining column names\n",
+    "summary_gender_purch_analysis.columns = [\"Purchase Count\",\"Average Purchase Price\",\"Total Purchase Value\",\"Avg Total Purchase per Person\"]\n",
+    "# Formatting\n",
+    "summary_gender_purch_analysis[\"Average Purchase Price\"] = summary_gender_purch_analysis[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
+    "summary_gender_purch_analysis[\"Total Purchase Value\"] = summary_gender_purch_analysis[\"Total Purchase Value\"].map(\"${0:,.2f}\".format)\n",
+    "summary_gender_purch_analysis[\"Avg Total Purchase per Person\"] = summary_gender_purch_analysis[\"Avg Total Purchase per Person\"].map(\"${:.2f}\".format)\n",
+    "summary_gender_purch_analysis"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,8 +441,22 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cindy\\Anaconda3\\envs\\PyData\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -488,7 +544,21 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Define the bins and the titles\n",
+    "age_bins = [0, 9.90, 14.90, 19.90, 24.90, 29.90, 34.90, 39.90, 99999]\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "# Separating the data into bins\n",
+    "purchase_data_no_duplicates[\"Age Ranges\"] = pd.cut(purchase_data_no_duplicates[\"Age\"],age_bins,labels=group_names)\n",
+    "# Define variables and calculations\n",
+    "age_demos_totals = purchase_data_no_duplicates[\"Age Ranges\"].value_counts()\n",
+    "age_demos_percents = round(age_demos_totals / count_players *100,2).astype(str) + '%'\n",
+    "# Creating the dataframe\n",
+    "age_summary = pd.DataFrame({\"Total Count\":age_demos_totals, \"Percentage of Players\":age_demos_percents})\n",
+    "age_summary = age_summary.round(2)\n",
+    "# Display\n",
+    "age_summary.sort_index()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -545,14 +615,7 @@
        "      <th>Purchase Count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>Normalized Totals</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -617,27 +680,25 @@
        "</div>"
       ],
       "text/plain": [
-       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "Age Ranges                                                              \n",
-       "<10                    23                  $3.35               $77.13   \n",
-       "10-14                  28                  $2.96               $82.78   \n",
-       "15-19                 136                  $3.04              $412.89   \n",
-       "20-24                 365                  $3.05            $1,114.06   \n",
-       "25-29                 101                  $2.90              $293.00   \n",
-       "30-34                  73                  $2.93              $214.00   \n",
-       "35-39                  41                  $3.60              $147.67   \n",
-       "40+                    13                  $2.94               $38.24   \n",
+       "      Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "<10               23                  $3.35               $77.13   \n",
+       "10-14             28                  $2.96               $82.78   \n",
+       "15-19            136                  $3.04              $412.89   \n",
+       "20-24            365                  $3.05            $1,114.06   \n",
+       "25-29            101                  $2.90              $293.00   \n",
+       "30-34             73                  $2.93              $214.00   \n",
+       "35-39             41                  $3.60              $147.67   \n",
+       "40+               13                  $2.94               $38.24   \n",
        "\n",
-       "           Avg Total Purchase per Person  \n",
-       "Age Ranges                                \n",
-       "<10                                $4.54  \n",
-       "10-14                              $3.76  \n",
-       "15-19                              $3.86  \n",
-       "20-24                              $4.32  \n",
-       "25-29                              $3.81  \n",
-       "30-34                              $4.12  \n",
-       "35-39                              $4.76  \n",
-       "40+                                $3.19  "
+       "      Normalized Totals  \n",
+       "<10               $4.54  \n",
+       "10-14             $3.76  \n",
+       "15-19             $3.86  \n",
+       "20-24             $4.32  \n",
+       "25-29             $3.81  \n",
+       "30-34             $4.12  \n",
+       "35-39             $4.76  \n",
+       "40+               $3.19  "
       ]
      },
      "execution_count": 7,
@@ -645,7 +706,26 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Setting up the table\n",
+    "purchase_data[\"Age Ranges\"] = pd.cut(purchase_data[\"Age\"],age_bins,labels=group_names)\n",
+    "# Performing calculations\n",
+    "avg_age = purchase_data.groupby([\"Age Ranges\"]).mean()[\"Price\"].rename(\"Average Purchase Price\")\n",
+    "age_purchase_total = purchase_data.groupby([\"Age Ranges\"]).sum()[\"Price\"].rename(\"Total Purchase Value\")\n",
+    "age_count = purchase_data.groupby([\"Age Ranges\"]).count()[\"Price\"].rename(\"Purchase Count\")\n",
+    "# Variable definitions\n",
+    "normalized_total = age_purchase_total / age_summary[\"Total Count\"]\n",
+    "# Creating the dataframe\n",
+    "age_data = pd.DataFrame({\"Purchase Count\": age_count, \"Average Purchase Price\": avg_age, \"Total Purchase Value\": age_purchase_total, \"Normalized Totals\": normalized_total})\n",
+    "# Formatting\n",
+    "age_data[\"Average Purchase Price\"] = age_data[\"Average Purchase Price\"].map(\"${:,.2f}\".format)\n",
+    "age_data[\"Total Purchase Value\"] = age_data[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "age_data [\"Purchase Count\"] = age_data[\"Purchase Count\"].map(\"{:,}\".format)\n",
+    "age_data[\"Normalized Totals\"] = age_data[\"Normalized Totals\"].map(\"${:,.2f}\".format)\n",
+    "age_data = age_data.loc[:, [\"Purchase Count\", \"Average Purchase Price\", \"Total Purchase Value\", \"Normalized Totals\"]]\n",
+    "# Display\n",
+    "age_data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -761,7 +841,20 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Calculations\n",
+    "user_total = purchase_data.groupby([\"SN\"]).sum()[\"Price\"].rename(\"Total Purchase Value\")\n",
+    "user_average = purchase_data.groupby([\"SN\"]).mean()[\"Price\"].rename(\"Average Purchase Price\")\n",
+    "user_count = purchase_data.groupby([\"SN\"]).count()[\"Price\"].rename(\"Purchase Count\")\n",
+    "# Setting up the DataFrame\n",
+    "user_data = pd.DataFrame({\"Purchase Count\": user_count,\"Average Purchase Price\": user_average, \"Total Purchase Value\": user_total})\n",
+    "# Displaying the table\n",
+    "sum_table_top_spenders=user_data.sort_values(\"Total Purchase Value\", ascending=False).head(5)\n",
+    "# Formatting\n",
+    "sum_table_top_spenders[\"Average Purchase Price\"] = user_data[\"Average Purchase Price\"].map(\"${:,.2f}\".format)\n",
+    "sum_table_top_spenders[\"Total Purchase Value\"] = user_data[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "sum_table_top_spenders"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -903,7 +996,24 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Reading data from csv file\n",
+    "item_data = purchase_data.loc[:,[\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "# Calculations\n",
+    "total_item_purchase = item_data.groupby([\"Item ID\",\"Item Name\"]).sum()[\"Price\"].rename(\"Total Purchase Value\")\n",
+    "average_item_purchase = item_data.groupby([\"Item ID\",\"Item Name\"]).mean()[\"Price\"]\n",
+    "item_count = item_data.groupby([\"Item ID\",\"Item Name\"]).count()[\"Price\"].rename(\"Purchase Count\")\n",
+    "# Displaying table\n",
+    "item_data_pd = pd.DataFrame({\"Total Purchase Value\": total_item_purchase, \"Item Price\": average_item_purchase, \"Purchase Count\": item_count})\n",
+    "item_data_pd = item_data_pd.loc[:,[\"Purchase Count\", \"Item Price\", \"Total Purchase Value\"]]\n",
+    "display_popular_item = item_data_pd.sort_values(\"Purchase Count\", ascending=False).head(5)\n",
+    "# Cleaning the data and formatting\n",
+    "display_popular_item[\"Item Price\"] = item_data_pd[\"Item Price\"].map(\"${:,.2f}\".format)\n",
+    "display_popular_item[\"Purchase Count\"] = item_data_pd[\"Purchase Count\"].map(\"{:,}\".format)\n",
+    "display_popular_item[\"Total Purchase Value\"] = item_data_pd[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "sum_most_pop_items = display_popular_item.loc[:,[\"Purchase Count\", \"Item Price\", \"Total Purchase Value\"]]\n",
+    "sum_most_pop_items"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -928,9 +1038,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -983,13 +1093,6 @@
        "      <td>$50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <th>Nirvana</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$4.90</td>\n",
-       "      <td>$44.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>145</th>\n",
        "      <th>Fiery Glass Crusader</th>\n",
        "      <td>9</td>\n",
@@ -997,11 +1100,18 @@
        "      <td>$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <th>Singed Scalpel</th>\n",
-       "      <td>8</td>\n",
-       "      <td>$4.35</td>\n",
-       "      <td>$34.80</td>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>$31.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <th>Persuasion</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.22</td>\n",
+       "      <td>$28.99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1012,33 +1122,36 @@
        "Item ID Item Name                                                     \n",
        "92      Final Critic                                             13   \n",
        "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "82      Nirvana                                                   9   \n",
        "145     Fiery Glass Crusader                                      9   \n",
-       "103     Singed Scalpel                                            8   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                 9   \n",
+       "132     Persuasion                                                9   \n",
        "\n",
        "                                                     Item Price  \\\n",
        "Item ID Item Name                                                 \n",
        "92      Final Critic                                      $4.61   \n",
        "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "82      Nirvana                                           $4.90   \n",
        "145     Fiery Glass Crusader                              $4.58   \n",
-       "103     Singed Scalpel                                    $4.35   \n",
+       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "132     Persuasion                                        $3.22   \n",
        "\n",
        "                                                     Total Purchase Value  \n",
        "Item ID Item Name                                                          \n",
        "92      Final Critic                                               $59.99  \n",
        "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "82      Nirvana                                                    $44.10  \n",
        "145     Fiery Glass Crusader                                       $41.22  \n",
-       "103     Singed Scalpel                                             $34.80  "
+       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  \n",
+       "132     Persuasion                                                 $28.99  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# Display sorted table\n",
+    "sum_most_pop_items.sort_values(\"Total Purchase Value\", ascending=False).head(5)"
+   ]
   }
  ],
  "metadata": {
@@ -1061,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
